--- a/Running_SLT.ipynb
+++ b/Running_SLT.ipynb
@@ -66,6 +66,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Establezco el crecimiento de la grafica a medida que necesite memoria\n",
+    "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
+    "tf.config.experimental.set_memory_growth(gpus[0], True)\n",
+    "tf.debugging.set_log_device_placement(False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
