Training network on tf2

--- a/Running_SLT.ipynb
+++ b/Running_SLT.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,13 +116,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils.preprocess_data import preprocessing_paths, preprocessing_sentences, table_paths_dataset\n",
     "from utils.build_tf_data import build_datasets\n",
-    "from utils.losses import SparseCategoricalCrossentropy_mask\n",
+    "from metrics.losses import SparseCategoricalCrossentropy_mask\n",
     "from models import compute_features, encoder, decoder, reduce_features, self_attentions, st_attentions, output"
    ]
   },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,11 +169,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Args = namedtuple('Args', 'max_len_sentence data pretrained prefetch_batch_buffer unitsEmbedding vocab_size videos_path rnnUnits dropout recurrent_dropout inputShape optimizer type_frames batchSize epochs lr momentum decay wDecay path2save name')\n",
+    "Args = namedtuple('Args', 'max_len_sentence data pretrained prefetch_batch_buffer unitsEmbedding vocab_size nIters videos_path rnnUnits dropout recurrent_dropout inputShape optimizer type_frames batchSize epochs lr momentum decay wDecay path2save name')\n",
     "\n",
     "args = Args(max_len_sentence=15,\n",
     "            videos_path='../DataSets/boston201',#'/content/boston201',\n",
@@ -187,7 +187,8 @@
     "            optimizer='adam',\n",
     "            type_frames='jpg/',\n",
     "            batchSize=1,\n",
-    "            epochs=10,\n",
+    "            epochs=20,\n",
+    "            nIters=10.0,\n",
     "            lr=0.001,\n",
     "            momentum=0.99,\n",
     "            decay=0.1,\n",
@@ -208,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -283,8 +284,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "model.summary()"
    ]
@@ -319,10 +322,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def step_decay(epoch):\n",
+    "    initial_lrate = args.lr\n",
+    "    drop = args.decay\n",
+    "    epochs_drop = args.nIters\n",
+    "    lrate = initial_lrate * math.pow(drop,  \n",
+    "           math.floor((1+epoch)/epochs_drop))\n",
+    "    return lrate\n",
+    "lrate_sheduler = tf.keras.callbacks.LearningRateScheduler(step_decay)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if args.optimizer == 'adam':\n",
+    "    opt = tf.keras.optimizers.Adam(\n",
+    "        lr=args.lr, \n",
+    "        beta_1=0.9, \n",
+    "        beta_2=0.999, \n",
+    "        epsilon=1e-08, \n",
+    "        decay=0.0, \n",
+    "        clipnorm=1., \n",
+    "        clipvalue=5)\n",
+    "\n",
+    "elif args.optimizer == 'sgd':]\n",
+    "    opt = tf.keras.optimizers.SGD(\n",
+    "        lr=args.lr, \n",
+    "        decay=0, \n",
+    "        momentum=args.momentum, \n",
+    "        nesterov=True, \n",
+    "        clipnorm=1., \n",
+    "        clipvalue=0.5)\n",
+    "\n",
+    "elif args.optimizer == 'rsmprop':\n",
+    "    opt = tf.keras.optimizers.RMSprop(lr=args.lr) \n",
+    "                         #clipnorm=1., \n",
+    "                         #clipvalue=0.5)      \n",
+    "else:\n",
+    "    raise ValueError('You must specify a valid optimizer for model. The only optmizers available are: '\n",
+    "                    '\"adam\", \"sgd\" or \"rmsprop\". The optmizer given was: '+str(args.optimizer))\n",
+    "acc = tf.keras.metrics.SparseCategoricalAccuracy(name=\"acc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer=opt, loss=SparseCategoricalCrossentropy_mask, metrics=[acc])\n",
+    "model.fit_generator(generator=training_generator,\n",
+    "                              use_multiprocessing=True,\n",
+    "                              workers=4,\n",
+    "                              epochs=args.epochs,\n",
+    "                              callbacks=callbacks_list)#validation_data=validation_generator,"
+   ]
   }
  ],
  "metadata": {
