--- a/Running_SLT.ipynb
+++ b/Running_SLT.ipynb
@@ -352,7 +352,7 @@
     "        clipnorm=1., \n",
     "        clipvalue=5)\n",
     "\n",
-    "elif args.optimizer == 'sgd':]\n",
+    "elif args.optimizer == 'sgd':\n",
     "    opt = tf.keras.optimizers.SGD(\n",
     "        lr=args.lr, \n",
     "        decay=0, \n",
@@ -369,6 +369,16 @@
     "    raise ValueError('You must specify a valid optimizer for model. The only optmizers available are: '\n",
     "                    '\"adam\", \"sgd\" or \"rmsprop\". The optmizer given was: '+str(args.optimizer))\n",
     "acc = tf.keras.metrics.SparseCategoricalAccuracy(name=\"acc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for v,l in train_data.take(1):\n",
+    "    "
    ]
   },
   {
