--- a/Running_SLT.ipynb
+++ b/Running_SLT.ipynb
@@ -365,8 +365,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for v,l in train_data.take(1):\n",
-    "    "
+    "def scale(data, label):\n",
+    "    return (data[0]/255., data[1]), label\n",
+    "\n",
+    "train_data = train_data.cache().map(scale, 24).batch(args.batchSize).prefetch(args.prefetch_batch_buffer)\n",
+    "test_data = train_data.cache().map(scale,24).batch(args.batchSize).prefetch(args.prefetch_batch_buffer)"
    ]
   },
   {
@@ -376,11 +379,9 @@
    "outputs": [],
    "source": [
     "model.compile(optimizer=opt, loss=SparseCategoricalCrossentropy_mask, metrics=[acc])\n",
-    "model.fit_generator(generator=training_generator,\n",
-    "                              use_multiprocessing=True,\n",
-    "                              workers=4,\n",
-    "                              epochs=args.epochs,\n",
-    "                              callbacks=callbacks_list)#validation_data=validation_generator,"
+    "model.fit(x = train_data, \n",
+    "          epochs=args.epochs,\n",
+    "          validation_data=test_data)"
    ]
   }
  ],
