Move build_datasets to runnning

--- a/Running_SLT.ipynb
+++ b/Running_SLT.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Configuraciones iniciales (Grafica y Equipo)"
+    "# Initial Config (GPU and Location)"
    ]
   },
   {
@@ -16,10 +16,10 @@
     "import os\n",
     "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\";\n",
     " \n",
-    "# lA ID de la GPU a usar, puede ser desde 0 hasta las N GPU's. Si es -1 significa que es en la CPU\n",
+    "# The GPU ID can be 0 to number_of_gpus - 1. If you want CPU put -1 \n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"1\";\n",
     "\n",
-    "#Si se esta trabajando en colab la variable debe quedar en falso\n",
+    "#If you are working in Colab put this variable to False\n",
     "SERVER = True"
    ]
   },
@@ -27,21 +27,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Importaciones"
+    "# Imports"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Librerias"
+    "## Libraries"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Instaladas python"
+    "### From python"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Establezco el crecimiento de la grafica a medida que necesite memoria\n",
+    "# Set the GPU Memory Growth with the use to True and log device to False\n",
     "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
     "tf.config.experimental.set_memory_growth(gpus[0], True)\n",
     "tf.debugging.set_log_device_placement(False)"
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Propias y externas"
+    "### Ours and 3rd Libraries"
    ]
   },
   {
@@ -94,13 +94,13 @@
     "if SERVER:\n",
     "    !git pull\n",
     "else:\n",
-    "    #Archivos py\n",
+    "    # Py archives\n",
     "    !git clone https://github.com/JefeLitman/SignLanguageTranslation_SLT.git\n",
-    "    #Organizacion archivos\n",
+    "    # Arrange files\n",
     "    !mv /content/SignLanguageTranslation_SLT/utils /content/\n",
     "    !mv /content/SignLanguageTranslation_SLT/models /content/\n",
     "    !mv /content/SignLanguageTranslation_SLT/metrics /content/\n",
-    "    #Elimino la carpeta sobrante\n",
+    "    # Delete the remaining files\n",
     "    !rm -rf /content/SignLanguageTranslation_SLT\n",
     "#DatasetsLoaderUtils\n",
     "!wget -q https://raw.githubusercontent.com/JefeLitman/VideoDataGenerator/master/DatasetsLoaderUtils.py -O DatasetsLoaderUtils.py\n",
@@ -114,7 +114,7 @@
    "outputs": [],
    "source": [
     "from utils.preprocess_data import preprocessing_paths, preprocessing_sentences, table_paths_dataset\n",
-    "from utils.build_tf_data import build_datasets\n",
+    "from utils.DatasetsLoaderUtils import flow_from_tablePaths\n",
     "from metrics.losses import SparseCategoricalCrossentropy_mask\n",
     "from models import compute_features, encoder, decoder, reduce_features, self_attentions, st_attentions, output"
    ]
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Datos"
+    "## Data"
    ]
   },
   {
@@ -134,14 +134,14 @@
    "source": [
     "if not SERVER:\n",
     "    !rm -rf /content/sample_data\n",
-    "    # Se esta descargando la data de Boston201\n",
+    "    # Download the data\n",
     "    !wget --quiet --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=1Ph_Ys3O_vI93WeTkDqr5h6kTJm0CZ0Ub' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=1Ph_Ys3O_vI93WeTkDqr5h6kTJm0CZ0Ub\" -O boston201.zip && rm -rf /tmp/cookies.txt\n",
     "    !unzip -q boston201.zip\n",
     "    !rm boston201.zip\n",
     "    !wget -q https://dl.fbaipublicfiles.com/fasttext/vectors-english/wiki-news-300d-1M.vec.zip -O word_vectors.zip\n",
     "    !unzip -q word_vectors.zip\n",
     "    !rm word_vectors.zip\n",
-    "    # Monto el drive para poder tener donde guardar los datos\n",
+    "    # Mount drive to save models and results\n",
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')"
    ]
@@ -150,14 +150,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modelo SLT"
+    "# Model SLT"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Parametros de la red"
+    "## Network parameters"
    ]
   },
   {
@@ -197,7 +197,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preparacion datos"
+    "## Preparing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initial data"
    ]
   },
   {
@@ -216,17 +223,50 @@
     "preprocessed_paths = preprocessing_paths(paths_videos, path2videos=args.videos_path, type_=args.type_frames)\n",
     "\n",
     "#Creating table paths\n",
-    "table_paths=table_paths_dataset(preprocessed_paths, preprocessed_sentences)\n",
-    "\n",
-    "#Get the train, test and dev data\n",
-    "train_data, test_data, dev_data = build_datasets(table_paths, args)"
+    "table_paths=table_paths_dataset(preprocessed_paths, preprocessed_sentences)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creacion y estructuracion"
+    "### Building tf.data.Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.data_augmentation import frame_sampling\n",
+    "\n",
+    "raw_data = flow_from_tablePaths(table_paths, lambda x: x, args.inputShape[1:3])\n",
+    "\n",
+    "train_gen = raw_data.data_generator(1, args.inputShape[-1])\n",
+    "def train_gen_sampling():\n",
+    "    for v, l in train_gen:\n",
+    "        s = np.r_[[int(j) for j in (raw_data.to_class[l]).split(\", \")]]\n",
+    "        for new_v in frame_sampling(v, args.inputShape[0]):\n",
+    "            yield (new_v, s[:-1]), s[1:]\n",
+    "train_data = tf.data.Dataset.from_generator(train_gen_sampling, ((tf.float32, tf.int64), tf.int64),\n",
+    "    ((args.inputShape, args.max_len_sentence-1), args.max_len_sentence-1))\n",
+    "\n",
+    "test_gen = raw_data.data_generator(2, args.inputShape[-1])\n",
+    "def test_gen_sampling():\n",
+    "    for v, l in test_gen:\n",
+    "        s = np.r_[[int(j) for j in (raw_data.to_class[l]).split(\", \")]]\n",
+    "        for new_v in frame_sampling(v, args.inputShape[0]):\n",
+    "            yield (new_v, s[:-1]), s[1:]\n",
+    "test_data = tf.data.Dataset.from_generator(test_gen_sampling, ((tf.float32, tf.int64), tf.int64),\n",
+    "    ((args.inputShape, args.max_len_sentence-1), args.max_len_sentence-1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Network instance"
    ]
   },
   {
@@ -283,7 +323,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Entrenamiento"
+    "## Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Callbacks"
    ]
   },
   {
@@ -299,7 +346,15 @@
     "    lrate = initial_lrate * math.pow(drop,  \n",
     "           math.floor((1+epoch)/epochs_drop))\n",
     "    return lrate\n",
-    "lrate_sheduler = tf.keras.callbacks.LearningRateScheduler(step_decay, verbose=1)"
+    "calls = [tf.keras.callbacks.LearningRateScheduler(step_decay, verbose=1),\n",
+    "        ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optimizer"
    ]
   },
   {
@@ -334,7 +389,15 @@
     "else:\n",
     "    raise ValueError('You must specify a valid optimizer for model. The only optmizers available are: '\n",
     "                    '\"adam\", \"sgd\" or \"rmsprop\". The optmizer given was: '+str(args.optimizer))\n",
+    "\n",
     "acc = tf.keras.metrics.SparseCategoricalAccuracy(name=\"acc\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data transformations and augmentations"
    ]
   },
   {
@@ -355,6 +418,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fit and save the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -363,8 +433,38 @@
     "model.compile(optimizer=opt, loss=SparseCategoricalCrossentropy_mask, metrics=[acc])\n",
     "model.fit(x = train_data, \n",
     "          epochs=args.epochs,\n",
-    "          callbacks=[lrate_sheduler],\n",
+    "          callbacks=calls,\n",
     "          validation_data=test_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fine-Tuning (Optional to the data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The Boston dataset doesn't have dev dision so there is not finetuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inference"
    ]
   }
  ],
