--- a/Running_SLT.ipynb
+++ b/Running_SLT.ipynb
@@ -181,7 +181,7 @@
     "            optimizer='adam',\n",
     "            type_frames='jpg/',\n",
     "            batchSize=1,\n",
-    "            epochs=1,\n",
+    "            epochs=20,\n",
     "            nIters=10.0,\n",
     "            lr=0.001,\n",
     "            momentum=0.99,\n",
@@ -199,6 +199,24 @@
    "metadata": {},
    "source": [
     "## Preparing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting the seeds for replicability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.seed(8128)\n",
+    "np.random.seed(8128)\n",
+    "tf.random.set_seed(8128)"
    ]
   },
   {
@@ -487,7 +505,7 @@
     "        i += 1\n",
     "        for new_v in [frame_sampling(v, args.inputShape[0])[0]]:\n",
     "            yield new_v, s, p\n",
-    "train_data = tf.data.Dataset.from_generator(train_gen_sampling, (tf.float32, tf.int64, str))\n",
+    "train_data = tf.data.Dataset.from_generator(train_gen_sampling, (tf.float32, tf.int64, tf.string)).batch(1)\n",
     "\n",
     "def test_gen_sampling():\n",
     "    i = 0\n",
@@ -499,7 +517,7 @@
     "        i += 1\n",
     "        for new_v in [frame_sampling(v, args.inputShape[0])[0]]:\n",
     "            yield new_v, s, p\n",
-    "test_data = tf.data.Dataset.from_generator(test_gen_sampling, (tf.float32, tf.int64, str))"
+    "test_data = tf.data.Dataset.from_generator(test_gen_sampling, (tf.float32, tf.int64, tf.string)).batch(1)"
    ]
   },
   {
@@ -508,7 +526,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = save_predictions(model, args.path2save, vocab, args, train_gen_sampling(), test_gen_sampling())"
+    "results = save_predictions(model, args.path2save, vocab, args, train_data, test_data)"
    ]
   },
   {
