--- a/Running_SLT.ipynb
+++ b/Running_SLT.ipynb
@@ -117,6 +117,7 @@
     "from utils.DatasetsLoaderUtils import flow_from_tablePaths\n",
     "from utils.results import save_predictions, calculate_metrics_results\n",
     "from metrics.losses import SparseCategoricalCrossentropy_mask\n",
+    "from metrics.accuracy import real_acc\n",
     "from models import compute_features, encoder, decoder, reduce_features, self_attentions, st_attentions, output"
    ]
   },
@@ -407,9 +408,7 @@
     "                         #clipvalue=0.5)      \n",
     "else:\n",
     "    raise ValueError('You must specify a valid optimizer for model. The only optmizers available are: '\n",
-    "                    '\"adam\", \"sgd\" or \"rmsprop\". The optmizer given was: '+str(args.optimizer))\n",
-    "\n",
-    "acc = tf.keras.metrics.SparseCategoricalAccuracy(name=\"acc\")"
+    "                    '\"adam\", \"sgd\" or \"rmsprop\". The optmizer given was: '+str(args.optimizer))"
    ]
   },
   {
@@ -449,7 +448,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(optimizer=opt, loss=SparseCategoricalCrossentropy_mask, metrics=[acc])\n",
+    "model.compile(optimizer=opt, loss=SparseCategoricalCrossentropy_mask, metrics=[real_acc,\n",
+    "    tf.keras.metrics.SparseCategoricalAccuracy(name=\"acc\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model.fit(x = train_data, \n",
     "          epochs=args.epochs,\n",
     "          callbacks=calls,\n",
